Switched my fade ins to a simpler library rather than do it myself. Less code. Fixing content and styling and overflow issues.

--- a/styles/sass/_general.scss
+++ b/styles/sass/_general.scss
@@ -14,6 +14,10 @@ body {
     overflow-x: hidden;
 }
 
+main {
+    overflow: hidden;
+}
+
 input, 
 textarea {
     font-family: 'Jost', sans-serif;
@@ -108,7 +112,7 @@ img {
     content: "";
     border-top: 1px solid $primaryColour;
     color: $primaryColour;
-    width: 2rem;
+    width: 1.5rem;
     margin-right: 2px;
     transform: translateY(-3px);
 }
