--- a/styles/styles.css
+++ b/styles/styles.css
@@ -260,6 +260,10 @@ body {
   overflow-x: hidden;
 }
 
+main {
+  overflow: hidden;
+}
+
 input,
 textarea {
   font-family: 'Jost', sans-serif;
@@ -354,7 +358,7 @@ img {
   content: "";
   border-top: 1px solid #F4BC17;
   color: #F4BC17;
-  width: 2rem;
+  width: 1.5rem;
   margin-right: 2px;
   -webkit-transform: translateY(-3px);
           transform: translateY(-3px);
